<resources>
    <string name="app_name">Musical Structure App</string>
    <string name="action_favorite">Mark Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="app_album">Top 10 Albums of the week</string>
    <string name="btn_album">Albums</string>
    <string name="app_artist"> Top 10 Artists of the week</string>
    <string name="btn_artist">Artists</string>
    <string name="app_playlist">Top 10 Songs of the Week</string>
    <string name="btn_playlist">Now Playing</string>
    <string name="app_library"> My Music Library</string>
    <string name="btn_library">Library</string>
    <string name="app_genre">Hottest Genres of the Week</string>
    <string name="btn_genre">Genres</string>
    <string name="txt_main">This activity is the doorway into the app. The buttons below each allows the user to launch a particular activity</string>
    <string name="txt_album">This activity shows a list of the current top albums of the week. Clicking on any of the albums drops down details about that particular album, like the song list, artist, year of release, number of downloads etc.</string>
    <string name="txt_artist">This activity shows a list of the current top singers of the week. Clicking on any of the artists drops down details about that particular artist like their most popular song list, a wiki-music link about them etc.</string>
    <string name="txt_genre">This activity shows a list of the top genres of the current hit songs. Clicking on any of the genres in the list displays info about which artists belong to that genre as well as playable links to each of those songs.</string>
    <string name="txt_library">This activity displays the personal music library of the user that resides on the app database in the cloud. This is displayed via connecting to the cloud and pulling information from the music app cloud for the user</string>
    <string name="txt_playlist">This activity displays the playlists created by the user, as well as the ones suggested by the app, to the user, by studying the overall preferences of the user. Here the user can either play one of her custom-made playlists from any music files residing on the mobile device, or select an auto-generated playlist created by the app for the user.</string>
</resources>
